--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ notifications:
 services:
  - postgresql
 before_script:
-  - psql -c 'CREATE DATABASE test_db;' -U postgres
-  - psql -c "CREATE USER tester WITH PASSWORD 'test';" -U postgres
-  - psql -c "ALTER DATABASE test_db OWNER TO tester;" -U postgres
+  - psql -c 'CREATE DATABASE login;' -U postgres
+  - psql -c "CREATE USER admin WITH PASSWORD 'admin123';" -U postgres
+  - psql -c 'ALTER DATABASE login OWNER TO admin;' -U postgres
