--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "FAC14_Week7",
   "version": "1.0.0",
   "description": "week 7: authentication &amp; cookies",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon src/server.js",
     "test": "NODE_ENV=test tape test/*.js | tap-spec",
