--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon src/server.js",
-    "test": "NODE_ENV=test tape test/*.js | tap-spec",
+    "test": "jest --coverage",
     "db": "node src/db/db_build.js",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
