--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "FAC14_Week7",
   "version": "1.0.0",
   "description": "week 7: authentication &amp; cookies",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "nodemon src/server.js",
     "test": "jest --coverage",
-    "db": "node src/db/db_build.js",
+    "db": "node src/db/db_build.cjs",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "repository": {
@@ -33,12 +34,13 @@
     "jsonwebtoken": "^8.3.0",
     "nodemon": "^1.18.4",
     "nyc": "^13.0.1",
-    "pg": "^7.4.3",
+    "pg": "^8.0.3",
     "supertest": "^3.1.0",
     "tap-spec": "^5.0.0",
     "tape": "^4.9.1"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "mime": "^3.0.0"
   }
 }
